Changed inoput list format. Added sorting by class.

--- a/list/index.html
+++ b/list/index.html
@@ -30,7 +30,8 @@
           <a href="#" id="sort-dropdown-button"
 	     class="nav-link dropdown-toggle" data-toggle="dropdown">Sortera</a>
           <ul id="sort-dropdown" class="dropdown-menu">
-	    <li class="dropdown-item"><a href="#" id="menu-item-sort-by-entry-id">Nummerordning</a></li>
+	    <li class="dropdown-item"><a href="#" id="menu-item-sort-by-entry-code">Nummerordning</a></li>
+	    <li class="dropdown-item"><a href="#" id="menu-item-sort-by-style">Öltypsordning</a></li>
 	    <li class="dropdown-item"><a href="#" id="menu-item-sort-by-rating">Bedömningsordning</a></li>
 	  </ul>
 	</li>
@@ -73,7 +74,7 @@
 		    <input type="text" class="form-control" id="vote-code"
 			   maxlength="6" placeholder="Röstningskod">
 		    <small id="vote-code-help" class="form-control-feedback"
-			   class="form-text text-muted">Se progambladet
+			   class="form-text text-muted">Se programbladet
 		      för att hitta din röstningskod.</small>
 		  </div>
 		</div>
