--- a/list/index.html
+++ b/list/index.html
@@ -35,7 +35,7 @@
 	    <li class="dropdown-item"><a href="#" id="menu-item-sort-by-rating">Bedömningsordning</a></li>
 	  </ul>
 	</li>
-	<li class="nav-item">
+	<li class="nav-item voting">
 	  <a class="nav-link" data-toggle="modal" href="#vote-popup">Folkets val</a>
 	</li>
       </ul>
@@ -139,7 +139,7 @@
 		<legend style="font-size: 1rem;">Kommentar:</legend>
 		<textarea id="popup-comment" rows="3"></textarea>
 	      </fieldset>
-	      <fieldset>
+	      <fieldset class="voting">
 		<legend style="font-size: 1rem;">Folkets val-röst:</legend>
 		<div id="popup-medal-group" class="btn-group" data-toggle="buttons">
 		  <label class="btn btn-primary" id="popup-medal-0-button">
@@ -156,13 +156,13 @@
 		    <input type="radio" name="popup-medal" value="3">Brons</input>
 		  </label>
 		</div>
+		<div id="popup-alert-no-vote-code"
+		     class="d-inline-block alert alert-danger hidden-xs-up">
+		  Mata in din röstningskod från programbladet för att
+		  registrera rösterna!
+		</div>
 	      </fieldset>
 	    </form>
-	    <div id="popup-alert-no-vote-code"
-		 class="d-inline-block alert alert-danger hidden-xs-up">
-	      Mata in din röstningskod från programbladet för att
-	      registrera rösterna!
-	    </div>
           </div>
         </div>
       </div>
