--- a/rate/index.html
+++ b/rate/index.html
@@ -10,7 +10,7 @@
 	  href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css">
     <link rel="stylesheet"
 	  href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="list.css" />
+    <link rel="stylesheet" href="rate.css" />
     <link rel="shortcut icon" href="data:image/x-icon;,"type="image/x-icon">
   </head>
   <body>
@@ -171,6 +171,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js"></script>
-    <script src="list.js" type="text/javascript"></script>
+    <script src="rate.js" type="text/javascript"></script>
   </body>
 </html>
