--- a/rate/index.html
+++ b/rate/index.html
@@ -1,6 +1,3 @@
-<!DOCTYPE html> <!-- -*- coding: utf-8 -*- -->
-<html>
-
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +13,7 @@
 </head>
 
 <body>
-	<nav class="navbar navbar-expand navbar-light" style="background-color: #d89200;">
+	<nav class="navbar navbar-expand navbar-light" style="background-color: #d89200;"> <!--bg-warning-->
 		<a class="navbar-brand" href="#" style="padding: 0px;">
 			<img alt="SHBF" src="logo.png" width="40">
 		</a>
@@ -25,7 +22,7 @@
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<ul class="nav navbar-nav">
+			<ul class="navbar-nav mr-auto">
 				<li class="nav-item dropdown">
 					<a href="#" id="class-dropdown-button" class="nav-link dropdown-toggle"
 						data-toggle="dropdown">Klasser</a>
@@ -67,22 +64,22 @@
 				</div>
 				<div class="modal-body">
 					<div id="vote-competition-status"></div>
-					<div class="votes-dirty-field d-inline-block alert
-			alert-danger hidden-xs-up">Det finns osparade röster.
+					<div class="votes-dirty-field d-none d-inline-block alert
+			alert-danger  d-sm-inline-block">Det finns osparade röster.
 					</div>
-					<div class="votes-registered-field d-inline-block
-			hidden-xs-up">Alla röster sparade.
+					<div class="votes-registered-field d-none d-inline-block
+					 d-sm-inline-block">Alla röster sparade.
 					</div>
 
 					<form>
 						<div class="row">
 							<div class="col-sm-8 col-xs-10">
 								<div class="form-group">
-									<label for="vote-code" class="form-control-label">Röstningskod</label>
+									<label for="vote-code" class="col-form-label">Röstningskod</label>
 									<input type="text" class="form-control" id="vote-code" maxlength="6"
 										placeholder="Röstningskod">
-									<small id="vote-code-help" class="form-control-feedback"
-										class="form-text text-muted">Se programbladet
+									<small id="vote-code-help" class="invalid-feedback"
+										class="form-text text-muted ">Se programbladet
 										för att hitta din röstningskod.</small>
 								</div>
 							</div>
