--- a/rate/index.html
+++ b/rate/index.html
@@ -64,11 +64,9 @@
 				</div>
 				<div class="modal-body">
 					<div id="vote-competition-status"></div>
-					<div class="votes-dirty-field d-none d-inline-block alert
-			alert-danger  d-sm-inline-block">Det finns osparade röster.
+					<div class="votes-dirty-field d-none d-inline-block alert alert-danger">Det finns osparade röster.
 					</div>
-					<div class="votes-registered-field d-none d-inline-block
-					 d-sm-inline-block">Alla röster sparade.
+					<div class="votes-registered-field d-none d-inline-block">Alla röster sparade.
 					</div>
 
 					<form>
