--- a/rate/index.html
+++ b/rate/index.html
@@ -7,7 +7,8 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
 		integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" crossorigin="anonymous"  />
 	<link rel="stylesheet" href="rate.css" />
 	<link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
 </head>
@@ -123,6 +124,7 @@
 						Alkohol:&nbsp;<span id="popup-alcohol">0.0</span>&nbsp;%,
 						IBU:&nbsp;<span id="popup-ibu">0</span></p>
 					<form>
+
 						<fieldset class="rating">
 							<legend style="font-size: 1rem;">Omdöme:</legend>
 							<input type="radio" id="popup-rating-star-0" name="popup-rating" value="" />
@@ -147,7 +149,7 @@
 							<div id="popup-medal-group" class="btn-group btn-group-toggle" data-toggle="buttons">
 								<label class="btn btn-primary" id="popup-medal-0-button">
 									<input type="radio" name="popup-medal" value="0"><span
-										class="fa fa-ban"></span></input>
+										class="fa fa-ban mt-1"></span></input>
 								</label>
 								<label class="btn btn-primary" id="popup-medal-1-button">
 									<input type="radio" name="popup-medal" value="1">Guld</input>
@@ -176,6 +178,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
 		integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
 		crossorigin="anonymous"></script>
+	<!-- <script src="https://kit.fontawesome.com/6b70a7a773.js" crossorigin="anonymous"></script> -->
 	<script src="rate.js" type="text/javascript"></script>
 </body>
 
