har duckit, drankcheck i popup

--- a/rate/index.html
+++ b/rate/index.html
@@ -124,7 +124,12 @@
 						Alkohol:&nbsp;<span id="popup-alcohol">0.0</span>&nbsp;%,
 						IBU:&nbsp;<span id="popup-ibu">0</span></p>
 					<form>
+						<fieldset class="drank">
+							<legend style="font-size: 1rem;">Provsmakat:</legend>
+							<input type="checkbox" id="popup-drankcheck" name="popup-drankcheck"  />
+							<label for="popup-drankcheck" class="ml-1"></label>
 
+						</fieldset>
 						<fieldset class="rating">
 							<legend style="font-size: 1rem;">Omdöme:</legend>
 							<input type="radio" id="popup-rating-star-0" name="popup-rating" value="" />
