--- a/rate/index.html
+++ b/rate/index.html
@@ -8,7 +8,8 @@
 		integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
 	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" crossorigin="anonymous"  />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
+		crossorigin="anonymous" />
 	<link rel="stylesheet" href="rate.css" />
 	<link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
 </head>
@@ -58,7 +59,7 @@
 			<div class="modal-content">
 				<div class="modal-header">
 					<h3 class="modal-title float-left">
-						
+
 						Folkets val
 					</h3>
 					<button type="button" class="btn btn-secondary float-right" data-dismiss="modal">Stäng</button>
@@ -77,8 +78,8 @@
 									<label for="vote-code" class="col-form-label">Röstningskod</label>
 									<input type="text" class="form-control" id="vote-code" maxlength="6"
 										placeholder="Röstningskod">
-									<small id="vote-code-help" class="invalid-feedback"
-										class="form-text text-muted ">Se programbladet
+									<small id="vote-code-help" class="invalid-feedback" class="form-text text-muted ">Se
+										programbladet
 										för att hitta din röstningskod.</small>
 								</div>
 							</div>
@@ -111,7 +112,7 @@
 			<div class="modal-content">
 				<div class="modal-header">
 					<h3 class="modal-title float-left">
-						
+
 						<span id="popup-header">XXX Ölnamn</span></br>
 						<span id="popup-style" class="beer-style">Ölklass</span>
 					</h3>
@@ -124,12 +125,16 @@
 						Alkohol:&nbsp;<span id="popup-alcohol">0.0</span>&nbsp;%,
 						IBU:&nbsp;<span id="popup-ibu">0</span></p>
 					<form>
-						<fieldset class="drank">
+						<fieldset class="" id="popup-drank">
 							<legend style="font-size: 1rem;">Provsmakat:</legend>
-							<input type="checkbox" id="popup-drankcheck" name="popup-drankcheck"  />
-							<label for="popup-drankcheck" class="ml-1"></label>
-
+							<div class=" d-inline-flex" >
+								<div class="drank rotate down" id="popup-drank-rot">
+									<input type="checkbox" id="popup-drankcheck" name="popup-drankcheck" />
+									<label for="popup-drankcheck" d="popup-drankcheck-label" class="ml-1"></label>
+								</div>
+							</div>
 						</fieldset>
+
 						<fieldset class="rating">
 							<legend style="font-size: 1rem;">Omdöme:</legend>
 							<input type="radio" id="popup-rating-star-0" name="popup-rating" value="" />
@@ -179,7 +184,7 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
-	
+
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
 		integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
 		crossorigin="anonymous"></script>
