--- a/rate/index.html
+++ b/rate/index.html
@@ -10,7 +10,7 @@
 	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
 		crossorigin="anonymous" />
-	<link rel="stylesheet" href="rate.css" />
+	<link rel="stylesheet" href="css/rate.css" />
 	<link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
 </head>
 
@@ -189,7 +189,7 @@
 		integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
 		crossorigin="anonymous"></script>
 	<!-- <script src="https://kit.fontawesome.com/6b70a7a773.js" crossorigin="anonymous"></script> -->
-	<script src="rate.js" type="text/javascript"></script>
+	<script src="js/rate.js" type="text/javascript"></script>
 </body>
 
 </html>
