--- a/rate/index.html
+++ b/rate/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-	<nav class="navbar navbar-expand navbar-light" style="background-color: #d89200;"> <!--bg-warning-->
+	<nav class="navbar sticky-top  navbar-expand navbar-light" style="background-color: #d89200;"> <!--bg-warning-->
 		<a class="navbar-brand" href="#" style="padding: 0px;">
 			<img alt="SHBF" src="logo.png" width="40">
 		</a>
@@ -46,6 +46,13 @@
 					<a class="nav-link" data-toggle="modal" href="#welcome-popup">Start</a>
 				</li>
 			</ul>
+
+			
+				<div class="input-group-sm col-xs-1 float-right">
+					<input class="form-control py-2 border-right-0 border" type="search" value="" placeholder="Sök nr..." id="search-beer">
+				</div>
+
+			
 		</div>
 	</nav>
 
@@ -70,13 +77,16 @@
 					<form>
 						<div class="form-group">
 							<label for="vote-code" class="col-form-label">Skriv in röstkoden för att fortsätta:</label>
-							<input type="text" class="form-control" id="vote-code" maxlength="6" placeholder="Röstkod, 6 tecken">
-							<small id="vote-code-help" class="invalid-feedback" class="form-text text-muted">Se programbladet för att hitta din röstkod.</small>
+							<input type="text" class="form-control" id="vote-code" maxlength="6"
+								placeholder="Röstkod, 6 tecken">
+							<small id="vote-code-help" class="invalid-feedback" class="form-text text-muted">Se
+								programbladet för att hitta din röstkod.</small>
 						</div>
 					</form>
 				</div>
 				<div class="modal-footer">
-					<button type="button" id="vote-proceed-button" class="btn btn-primary" data-dismiss="modal" disabled>Fortsätt</button>
+					<button type="button" id="vote-proceed-button" class="btn btn-primary" data-dismiss="modal"
+						disabled>Fortsätt</button>
 				</div>
 			</div>
 		</div>
@@ -155,7 +165,7 @@
 					<form>
 						<fieldset class="" id="popup-drank">
 							<legend style="font-size: 1rem;">Provsmakat:</legend>
-							<div class=" d-inline-flex" >
+							<div class=" d-inline-flex">
 								<div class="drank rotate down" id="popup-drank-rot">
 									<input type="checkbox" id="popup-drankcheck" name="popup-drankcheck" />
 									<label for="popup-drankcheck" d="popup-drankcheck-label" class="ml-1"></label>
