--- a/rate/index.html
+++ b/rate/index.html
@@ -43,7 +43,7 @@
 				</li>
 				<li class="nav-item voting">
 					<!-- <a class="nav-link" data-toggle="modal" href="#vote-popup">Folkets val</a> -->
-					<a class="nav-link" data-toggle="modal" href="#welcome-popup">Start</a>
+					<a class="nav-link ml-3" data-toggle="modal" href="#welcome-popup">Hjälp</a>
 				</li>
 			</ul>
 
