--- a/rate/index.html
+++ b/rate/index.html
@@ -17,7 +17,7 @@
 <body>
 	<nav class="navbar sticky-top  navbar-expand navbar-light" style="background-color: #d89200;"> <!--bg-warning-->
 		<a class="navbar-brand" href="#" style="padding: 0px;">
-			<img alt="SHBF" src="logo.png" width="40">
+			<img alt="SHBF" src="logo2.png" width="40" style="background-color: transparent;">
 		</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 			aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,7 +49,7 @@
 
 			
 				<div class="input-group-sm col-xs-1 float-right">
-					<input class="form-control py-2 border-right-0 border" type="search" value="" placeholder="Sök nr..." id="search-beer">
+					<input class="form-control py-2 border-right-0 border" type="search" value="" placeholder="Sök nr..."  id="search-beer">
 				</div>
 
 			
