--- a/rate/index.html
+++ b/rate/index.html
@@ -7,9 +7,9 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
 		integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
-	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
 		crossorigin="anonymous" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/driver.js@1.0.1/dist/driver.css"/>		
 	<link rel="stylesheet" href="css/rate.css" />
 	<link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
 </head>
@@ -26,7 +26,8 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item dropdown">
-					<a href="#" id="class-dropdown-button" class="nav-link dropdown-toggle"
+					
+					<a href="#" id="beer-class-dropdown-button" class="nav-link dropdown-toggle"
 						data-toggle="dropdown">Klasser</a>
 					<ul id="class-dropdown" class="dropdown-menu">
 						<!-- Javascript will insert menu item per voting class here. -->
@@ -41,21 +42,23 @@
 						<li class="dropdown-item"><a href="#" id="menu-item-sort-by-rating">Bedömningsordning</a></li>
 					</ul>
 				</li>
-				<li class="nav-item voting">
-					<!-- <a class="nav-link" data-toggle="modal" href="#vote-popup">Folkets val</a> -->
-					<a class="nav-link ml-3" data-toggle="modal" href="#welcome-popup">Hjälp</a>
+				<li class="nav-item rate-start">
+
+					<a class="nav-link ml-3" id="menu-rate-start" data-toggle="modal" href="#welcome-popup">Hjälp</a>
 				</li>
 			</ul>
 
 
 			<div class="input-group-sm col-xs-1 float-right">
-				<input class="form-control py-2 border-right-0 border" type="search" value="" placeholder="Sök nr..."
-					id="search-beer">
+				<input class="form-control py-2 border-right-0 border" type="search" value="" placeholder="sök..."
+					id="menu-search-beer">
 			</div>
 
 
 		</div>
 	</nav>
+
+
 
 
 	<!--status-->
@@ -75,7 +78,7 @@
 		</div>
 	</div>
 
-	<div class="tab-content">
+	<div class="tab-content" >
 
 		<!-- Javascript will insert one tab per voting class here. -->
 
@@ -194,7 +197,8 @@
 										<fieldset class="rating" disabled>
 											<legend style="font-size: 1rem;">Betyg:</legend>
 											<input type="radio" id="popup-rating-star-0" name="popup-rating" value="" />
-											<label for="popup-rating-star-0" class="rating-clear-button mr-2">ta bort</label>
+											<label for="popup-rating-star-0" class="rating-clear-button mr-2">ta
+												bort</label>
 											<input type="radio" id="popup-rating-star-1" name="popup-rating"
 												value="1" />
 											<label for="popup-rating-star-1">1</label>
@@ -217,8 +221,11 @@
 									<div class="col">
 
 										<fieldset class="rating-comment mt-2">
-											<legend style="font-size: 1rem;" title="Valfri feedback om ölet. Bryggaren kan se kommentaren efter att tävlingen är avslutad">Omdöme/kommentar till bryggaren</legend>
-											<textarea   class="form-control" d="popup-comment" maxlength="500" rows="3" placeholder="Valfri kommentar om ölet. Bryggaren kan läsa kommentaren efter tävlingen."></textarea>
+											<legend style="font-size: 1rem;"
+												title="Valfri feedback om ölet. Bryggaren kan se kommentaren efter att tävlingen är avslutad">
+												Omdöme/kommentar till bryggaren</legend>
+											<textarea class="form-control" id="popup-comment" maxlength="500" rows="3"
+												placeholder="Valfri kommentar om ölet. Bryggaren kan läsa kommentaren efter tävlingen."></textarea>
 										</fieldset>
 									</div>
 								</div>
@@ -242,10 +249,12 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
 
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
-		integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
 		crossorigin="anonymous"></script>
-	<!-- <script src="https://kit.fontawesome.com/6b70a7a773.js" crossorigin="anonymous"></script> -->
+	
+	<script src="https://cdn.jsdelivr.net/npm/driver.js@1.0.1/dist/driver.js.iife.js"></script>
 	<script src="js/rate.js" type="text/javascript"></script>
 </body>
 
