Update navbar and dropdown menu styles

--- a/rate/index.html
+++ b/rate/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-	<nav class="navbar sticky-top  navbar-expand navbar-light" style="background-color: #d89200;"> <!--bg-warning-->
+	<nav class="navbar sticky-top  navbar-expand navbar-light" >
 		<a class="navbar-brand" href="#" style="padding: 0px;">
 			<img alt="SHBF" src="logo2.png" width="40" style="background-color: transparent;">
 		</a>
