--- a/rate/index.html
+++ b/rate/index.html
@@ -9,19 +9,19 @@
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
 		crossorigin="anonymous" />
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/driver.js@1.0.1/dist/driver.css"/>		
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/driver.js@1.0.1/dist/driver.css" />
 	<link rel="stylesheet" href="css/rate.css" />
-	<link rel="stylesheet" href="css/theme_sm2024.css">
+	<link rel="stylesheet" id="css-theme" href="css/theme_default.css">
 	<link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
 </head>
 
 <body>
-	
-	<nav class="navbar sticky-top  navbar-expand navbar-light" >
-		
+
+	<nav class="navbar sticky-top  navbar-expand navbar-light">
+
 		<a class="navbar-brand" href="#" style="padding: 0px;">
-			<img alt="SHBF" src="logo2.png" width="40" style="background-color: transparent;"
-			data-toggle="modal" href="#welcome-popup">
+			<img alt="SHBF" src="logo2.png" width="40" style="background-color: transparent;" data-toggle="modal"
+				href="#welcome-popup">
 		</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 			aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,7 +30,7 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item dropdown">
-					
+
 					<a href="#" id="beer-class-dropdown-button" class="nav-link dropdown-toggle"
 						data-toggle="dropdown">Klasser</a>
 					<ul id="class-dropdown" class="dropdown-menu">
@@ -49,9 +49,9 @@
 				<li class="nav-item rate-start">
 					<!--Hjälp / Start-->
 					<a class="nav-link " id="menu-rate-start" data-toggle="modal" href="#welcome-popup">
-						<i class="fas fa-running mt-1 mr-3" style="font-size: 22px;" ></i>
+						<i class="fas fa-running mt-1 mr-3" style="font-size: 22px;"></i>
 					</a>
-					
+
 				</li>
 			</ul>
 
@@ -87,74 +87,121 @@
 		</div>
 	</div>
 
-	<div class="tab-content" >
+	<div class="tab-content">
 
 		<!-- Javascript will insert one tab per voting class here. -->
 
 	</div>
 
-
 	<div id="welcome-popup" class="modal" role="dialog" data-backdrop="static">
 		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
+			<div class="modal-content" id="modal-content-eventposter_img">
+				<!--if no eventposter-->
+				<div class="modal-header d-none">
 					<h3 class="modal-title float-left">
 						Välkommen till <span id="competition-name">SHBF Ölträff</span>!
 					</h3>
 
 				</div>
-				<div class="modal-body">
-					<p class="mb-0">På <strong>programbladets</strong> baksida hittar du din personliga röstkod.</p>
-					<form>
-						<div class="form-group">
-							<label for="vote-code" class="col-form-label">Skriv in röstkoden för att fortsätta:</label>
-							<input type="text" class="form-control" tabindex="1" id="vote-code" maxlength="6"
-								placeholder="Röstkod, 6 tecken">
-							<small id="vote-code-help" class="invalid-feedback" class="form-text text-muted">Se
-								programbladet för att hitta din röstkod.</small>
-						</div>
-					</form>
-					<div class="competition-status alert-info" id="beer-popup-competition-status"></div>
-					<div class="card">
-						<div class="card-body">
-							<h5 class="card-title mt-0" Id="welcome-popup-infoheader">Information
-								<a href="#" class="card-link float-right ">
-									<i class="fas fa-angle-double-up rotate down" Id="welcome-popup-lesshelp"></i></a>
-							</h5>
-							<div id="welcome-help-card">
-								<h6 class="card-subtitle text-muted">På den här sidan hittar du alla öl som är med i
-									tävlingen.</h6>
-								<p class="card-text mb-0 mt-0">
-									Varje öl har även en <strong>QR-kod</strong> du kan scanna med mobilens kamera för
-									snabbåtkomst.
-								</p>
-								<p class="card-text">
-									Håll koll på <strong>provsmakade</strong> öl genom att trycka på <i
-										class="fas fa-wine-glass" style="color:#FFD43B;">.</i>
-									Du <strong>röstar</strong> på provsmakade öl genom att betygsätta dem med
-									<strong>1-5 stjärnor</strong> <i class="fas fa-star" style="color: gold;">.</i>
-								</p>
+				<div class="modal-body" id="modal-body-eventposter_img">
+					<!-- carousel -->
+					<div id="carousel-welcome" class="carousel slide" data-ride="carousel" data-wrap="false" data-interval="3000">
+						<!-- <ol class="carousel-indicators">
+							<li data-target="#carousel-welcome" data-slide-to="0" class="active"></li>
+							<li data-target="#carousel-welcome" data-slide-to="1"></li>
+						</ol> -->
+						<div class="carousel-inner">
+							<div class="carousel-item active d-none" id="eventposter-slide" >
 
-								<p class="card-text text-muted mb-0">
-									<small>Systemet viktar automatiskt dina stjärnor till tävlingspoäng.
-										<a href="#" class="card-link " Id="welcome-popup-morehelp">Mer info <i
-												class="fas fa-arrow-down"></i></a></small>
-								<p class="card-text text-muted " Id="welcome-popup-showmore">
-									<small>5 stjärnor är bästa betyg. Tävlingspoängen som systemet räknar fram baseras
-										bla. på
-										antal öl du betygsatt och antal öl i tävlingsklassen
-										(att betygsätta enbart en enstaka öl med 5 stjärnor ger alltså inte maximal
-										tävlingspoäng till den
-										ölen)</small>
-								</p>
-								</p>
-								</p>
+
+								<img class="d-block w-100"  src=""
+									alt="Front Programblad">
 
 							</div>
+							<!--welcome popup, vote code input-->
+							<div class="carousel-item">
+
+
+								<p class="mb-0">På <strong>programbladets</strong> baksida hittar du din personliga
+									röstkod.</p>
+								<form>
+									<div class="form-group">
+										<label for="vote-code" class="col-form-label">Skriv in röstkoden för att
+											fortsätta:</label>
+										<input type="text" class="form-control" tabindex="1" id="vote-code"
+											maxlength="6" placeholder="Röstkod, 6 tecken">
+										<small id="vote-code-help" class="invalid-feedback"
+											class="form-text text-muted">Se
+											programbladet för att hitta din röstkod.</small>
+									</div>
+								</form>
+								<div class="competition-status alert-info" id="beer-popup-competition-status"></div>
+								<div class="card">
+									<div class="card-body">
+										<h5 class="card-title mt-0" Id="welcome-popup-infoheader">Information
+											<a href="#" class="card-link float-right ">
+												<i class="fas fa-angle-double-up rotate down"
+													Id="welcome-popup-lesshelp"></i></a>
+										</h5>
+										<div id="welcome-help-card">
+											<h6 class="card-subtitle text-muted">På den här sidan hittar du alla öl som
+												är med i
+												tävlingen.</h6>
+											<p class="card-text mb-0 mt-0">
+												Varje öl har även en <strong>QR-kod</strong> du kan scanna med mobilens
+												kamera för
+												snabbåtkomst.
+											</p>
+											<p class="card-text">
+												Håll koll på <strong>provsmakade</strong> öl genom att trycka på <i
+													class="fas fa-wine-glass" style="color:#FFD43B;">.</i>
+												Du <strong>röstar</strong> på provsmakade öl genom att betygsätta dem
+												med
+												<strong>1-5 stjärnor</strong> <i class="fas fa-star"
+													style="color: gold;">.</i>
+											</p>
+
+											<p class="card-text text-muted mb-0">
+												<small>Systemet viktar automatiskt dina stjärnor till tävlingspoäng.
+													<a href="#" class="card-link " Id="welcome-popup-morehelp">Mer info
+														<i class="fas fa-arrow-down"></i></a></small>
+											<p class="card-text text-muted " Id="welcome-popup-showmore">
+												<small>5 stjärnor är bästa betyg. Tävlingspoängen som systemet räknar
+													fram baseras
+													bla. på
+													antal öl du betygsatt och antal öl i tävlingsklassen
+													(att betygsätta enbart en enstaka öl med 5 stjärnor ger alltså inte
+													maximal
+													tävlingspoäng till den
+													ölen)</small>
+											</p>
+											</p>
+											</p>
+
+										</div>
+									</div>
+								</div>
+							</div>
+
+
 						</div>
 					</div>
-				</div>
-				<div class="modal-footer">
+					<!--include no -prev button because it interferes with "touching"/"clicking" at the left end of vote_code-input in slide 2
+					    which mighjt be confusing to the user while entering a code. Touch screen swiping back to the first slide is still possible .-->
+
+					<!-- <button class="carousel-control-prev" type="button" data-target="#carousel-welcome"
+						data-slide="prev">
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						<span class="sr-only">Föregående</span>
+					</button> -->
+					<button class="carousel-control-next" type="button" data-target="#carousel-welcome"
+						data-slide="next">
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						<span class="sr-only">Nästa</span>
+					</button>
+				</div> <!-- EO carousel -->
+
+				<div class="modal-footer" id="modal-footer-welcome">
 					<button type="button" id="vote-proceed-no-code-button" tabindex="3"
 						class="btn btn-link text-muted mr-5" data-dismiss="modal">
 						Fortsätt utan kod</button>
@@ -262,7 +309,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
 		crossorigin="anonymous"></script>
-	
+
 	<script src="https://cdn.jsdelivr.net/npm/driver.js@1.0.1/dist/driver.js.iife.js"></script>
 	<script src="js/rate.js" type="text/javascript"></script>
 </body>
