Update rate/index.html, rate/css/theme_sm2024.css, and rate/js/rate.js

--- a/rate/index.html
+++ b/rate/index.html
@@ -168,10 +168,10 @@
 											<p class="card-text text-muted " Id="welcome-popup-showmore">
 												<small>5 stjärnor är bästa betyg. Tävlingspoängen som systemet räknar
 													fram baseras
-													bla. på
-													antal öl du betygsatt och antal öl i tävlingsklassen
-													(att betygsätta enbart en enstaka öl med 5 stjärnor ger alltså inte
-													maximal
+													på
+													antal öl du betygsatt, fördelningen av dina stjärnor och antal öl i tävlingsklassen
+													(att betygsätta en enstaka öl med 5 stjärnor ger inte
+													mest fördelaktig
 													tävlingspoäng till den
 													ölen)</small>
 											</p>
