Update rate.js and common.inc files with beer style changes

--- a/rate/index.html
+++ b/rate/index.html
@@ -213,6 +213,8 @@
 		</div>
 	</div>
 
+
+	<!-- Beer popup -->
 	<div id="beer-popup" class="modal" role="dialog">
 		<div class="modal-dialog">
 			<div class="modal-content">
@@ -297,6 +299,30 @@
 					</div>
 
 					<div class=" alert competition-status" id="beer-popup-competition-status"></div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!--Beer Style Guide Modal-->
+	<div id="style-guide-popup" class="modal" role="dialog">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h3 class="modal-title float-left">
+						Ölstilsguide
+					</h3>
+					<button type="button" class="btn btn-secondary float-right" data-dismiss="modal">Stäng</button>
+				</div>
+				<div class="modal-body">
+					<p>Ölstilsguiden är en sammanställning av de olika ölstilar som används i tävlingen. Guiden är
+						ett hjälpmedel för att förstå vad som kännetecknar de olika ölstilarna.</p>
+					<p>Ölstilarna är indelade i olika kategorier och underkategorierna är sorterade efter
+						alfabetisk ordning.</p>
+					<p>Om du vill läsa mer om en specifik ölstil, klicka på ölstilen i listan nedan.</p>
+					<div class="accordion" id="style-guide-accordion">
+						<!-- Javascript will insert one accordion item per beer style here. -->
+					</div>
 				</div>
 			</div>
 		</div>
