Update rate.css, rate/index.html, and rate/js/rate.js with style guide changes

--- a/rate/index.html
+++ b/rate/index.html
@@ -225,8 +225,10 @@
 						<span id="popup-style" class="beer-style">Ölklass</span>
 					</h3>
 					<button type="button" class="btn btn-secondary float-right" data-dismiss="modal">Stäng</button>
+					
 				</div>
 				<div class="modal-body">
+					<button type="button" id="beer-popup-guide" class="btn btn-outline-secondary btn-sm float-right">Guide</button>
 					<p><strong>Bryggare: </strong><span id="popup-brewer" >Bryggare</span></p>
 					<p id="popup-brewer-data">
 						<span class="badge  badge-secondary">OG:&nbsp;<span id="popup-og" >1,000</span></span>
