Update CSS theme in rate/user/index.html, add competition check in vote/admin/index.php, and fix sorting in DbAccess class in vote/php/common.inc

--- a/rate/user/index.html
+++ b/rate/user/index.html
@@ -13,7 +13,7 @@
 		crossorigin="anonymous" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/driver.js@1.0.1/dist/driver.css" />
 	<link rel="stylesheet" href="../css/rate.css" />
-	<link rel="stylesheet" id="css-theme" href="../css/theme_default.css">
+	<link rel="stylesheet" id="css-theme" href="../css/theme_sm2024.css">
 	<link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
 </head>
 <body>
